# paper-diff

./: .gitignore  AGENTS.md  README.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py  errors.py
apps/api/app/domain/: aligner.py  media.py  merge_engine.py  root_detect.py  tex_context.py
apps/api/app/infra/: docker_mount.py  workspace_fs.py
apps/api/app/schemas/: dto.py
apps/api/app/services/: agent_service.py  compare_service.py  compile_service.py  git_service.py  project_service.py  zone_service.py
apps/api/tests/: test_accept_file.py  test_agent.py  test_async_compile.py  test_compile_aux.py  test_compile_smoke.py  test_docker_mount.py  test_file_raw.py  test_file_slice.py  test_git_import.py  test_git_timeline.py  test_latexdiff_api.py  test_merge_engine.py  test_projects_api.py  test_root_and_compare.py  test_sse.py  test_startup_clear.py  test_supplement_import.py  test_tex_context.py  test_v2_work_zones.py  test_zip_encoding.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.vue  embed.ts  main.ts  styles.css
apps/web/src/components/: OverlayScroll.vue  ToastStack.vue  ToolStrip.vue  WorkViewPane.vue
apps/web/src/i18n/: index.ts
apps/web/src/shared/: api.ts
apps/web/src/stores/: compareTarget.test.ts  compareTarget.ts  layout.reorder.test.ts  layout.ts  project.applyCompare.test.ts  project.ts  (+8 more)
docker/: docker-compose.yml
docker/texlive/: Dockerfile
fixtures/: README.md
fixtures/sample/base/: main.tex
(+72 files in other folders)
